# GAMMA

./: README.md  main.ipynb  main.py  pyproject.toml
.github/agents/: eda-autoresearch.agent.md
data/deescuy/: metadata.txt  sample submission.csv
scripts/: EDA.py
