[project]
name = "gamma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "kaggle>=2.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pynvml>=13.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
